# QMineSweeper

./: .gitignore  CMakeLists.txt  CMakeSettings.json  COPYING.LESSER  KNOWN_BUGS.txt  QMineSweeper.pro  README.md  TODO.txt  install-cmake.sh  install-qmake.sh  install-qminesweeper-qmake.sh  install-qminesweeper.sh  install.sh  qminesweeper.desktop  run-qminesweeper.sh
Android/: AndroidManifest.xml  gradle.properties  gradle.properties~  local.properties  local.properties~
cmake/: FindQt5.cmake
config/: defaults.config
forms/: AboutApplicationWidget.ui  BoardResizeWidget.ui  MainWindow.ui  aboutqmsdialog.ui  aboutqmswidget.ui  aboutqmswindow.ui  board-size-dialog.ui  boardresizedialog.ui  boardresizewidget.ui  boardresizewindow.ui  mainwindow.ui  mainwindow.ui.txt
include/: boardresizewindow.h  customdialog.h  eventtimer.h  gamecontroller.h  mainwindow.h  minecoordinatehash.h  minecoordinates.h  minesweeperbutton.h  qminesweeperbutton.h  qminesweepericons.h  qminesweepersoundeffects.h  qminesweeperstrings.h  qminesweeperutilities.h
installer/: QMineSweeper_Win_Not_XP_x64.iss  QMineSweeper_Win_Not_XP_x86.iss  QMineSweeper_Win_XP_x86.iss  QMineSweeper_x64.iss  QMineSweeper_x86.iss
resources/: QMineSweeper.rc  icons.qrc  qminesweeper.rc
src/: AboutApplicationWidget.cpp  AboutApplicationWidget.hpp  AboutQmsWidget.cpp  AboutQmsWidget.h  AbstractEventNotifier.hpp  ApplicationSettings.cpp  ApplicationSettings.hpp  AutoUpdateLCD.cpp  AutoUpdateLCD.h  AutoUpdateLCD.hpp  BoardResizeWidget.cpp  BoardResizeWidget.h  BoardResizeWidget.hpp  ChangeAwareValue.hpp  EventTimer.h  EventTimer.hpp  GameController.cpp  GameController.h  GameController.hpp  GlobalDefinitions.h  GlobalDefinitions.hpp  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MineCoordinateHash.h  MineCoordinateHash.hpp  MineCoordinates.cpp  MineCoordinates.h  MineCoordinates.hpp  MouseMoveableQMainWindow.cpp  MouseMoveableQMainWindow.hpp  MouseMoveableQWidget.cpp  MouseMoveableQWidget.hpp  PrettyPrinter.cpp  PrettyPrinter.hpp  ProgramOption.hpp  QmsApplicationSettings.cpp  QmsApplicationSettings.h  QmsApplicationSettings.hpp  (+83 more)
utility/: .qminesweeper.desktop.skel  QMineSweeper.conf  QMineSweeper.desktop
